# AI-Agents-exercise10

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
demo/: __init__.py  visualization.py
src/: main.py
src/agent/: __init__.py  base_agent.py  dqn_agent.py  human_agent.py  neural_networks.py  ppo_agent.py  reinforce_agent.py  replay_buffer.py
src/environment/: constants.py  game_logic.py  snake_env.py
src/training/: __init__.py  adaptive_trainer.py  comparison.py  curriculum_trainer.py  trainer.py
src/utils/: config.py  model_utils.py
src/visualization/: colors.py  pygame_renderer.py  stats_display.py
tests/: test_agents.py  test_environment.py
